# matrix-detex

./: LICENSE  MatrixDetex.hs  README.md  matrix-detex.cabal
