name:                matrix-detex
version:             0.1.0.0
synopsis:            LaTeX Matrices -> Wolfram Matrices
description:         Transforms LaTeX style matrices into Wolfram style matrices.
                     (For use with Wolfram Alpha)
homepage:            https://github.com/mystor/matrix-detex
license:             MIT
license-file:        LICENSE
author:              Michael Layzell
maintainer:          michael@thelayzells.com
build-type:          Simple
cabal-version:       >=1.10

executable matrix-detex
  main-is:             MatrixDetex.hs
  build-depends:       base >=4.6 && <4.7, text >=1.1 && <1.2, Hclip >=3.0 && <3.1, parsec >=3.1 && <3.2
  default-language:    Haskell2010
